--- a/5. changingCSSStyles/index.html
+++ b/5. changingCSSStyles/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>The DOM</h1>
-
-    <a href="http://www.google.com">Link to Somewhere Cool..</a>
-
-    <p class="error">Lorem, ipsum.</p>
+    <h1 style="color: orange">The DOM</h1>
 
     <script src="sandbox.js"></script>
   </body>
